### Voltaire's Nightmare Changelog ###

# v 2.1.4 #

-Small fixes for the following mission trees: Flanders, Russia, Pisa, Mazovia, Switzerland, Provence, Sicily
-The Baltic Orders should finally, and I mean finally, spawn with proper techs
-Missions will no longer require you to increase the loyalty of estates over 60% or their landshare at all
-Added 1 new estate privilege for the Mamluks
-Hohenstaufer Inheritance incident can now also fire in the Age of Holy Wars
-Fragmentation of Poland ending event should no longer fire twice if you choose to keep Poland united
-Refusing a province to become Germanic during the ostsiedlung will no longer cause nationwide unrest
-Corrected some Magyar DPNs
-More German localization additions
-Other minor localization/bug fixes

# v 2.1.3 #

-Added the following new mercenary companies: Syrian Company, Anatolian Skirmishers, Siculo-Norman Company, Hussite Warbands, Silesian Companions, Austrian Grenzers, Brabanters, Avar Elite, and a secret one
-Added new mission tree for Aquitaine with 29 missions
-Added new mission tree for Muscovy and Russia with 77 missions
-Small fixes for the following mission trees: Pisa, Sicily, Altsachsen, Holland/Netherlands, Luxembourg, Athens, Naples, Karlings, Prussia, Baghdad, Seljuks, Switzerland, Foix
-Fixed major bug where some crusade ending events wouldn't fire
-Fixed Byzantium losing crown land when loading a savegame
-Fixed the Mazovia formation decision showing for Mazovia
-Fixed some Asian missions being duplicated (also fixes the "Production Leader" mission not showing)
-Fixed Sicilian formation not properly giving missions
-Overhauled and extended Provence's mission tree
-Added CoT for Wurzburg
-Increased Magdeburg's development
-Stuttgart is no longer part of two trade nodes
-Fixed several mission tooltips that became bugged after 2.1.0
-Forming Assyria now actually gives you their missions
-Edward the Confessor will now suffer from a reduced lifespan and fertility
-Changed Lebus' flag