@@ -2261,7 +2261,7 @@ country_event = {
 }
 
 ###PAPAL STATES###
-#Pope supports the Reconquista
+#Crusade of Barbastro
 country_event = {
 	id = vn_missions.40
 	title = vn_missions.40.t
@@ -2269,10 +2269,6 @@ country_event = {
 	picture = LAND_MILITARY_eventPicture
 
 	is_triggered_only = yes
-
-	immediate = {
-		
-	}
 
 	option = {
 		name = vn_missions.40.a
@@ -2301,7 +2297,7 @@ country_event = {
 	}
 }
 
-
+#Victory at Barbastro
 country_event = {
 	id = vn_missions.41
 	title = vn_missions.41.t
@@ -2455,7 +2451,7 @@ country_event = {
 	}
 }
 
-
+#Defeat at Barbastro
 country_event = {
 	id = vn_missions.42
 	title = vn_missions.42.t
@@ -2524,7 +2520,7 @@ country_event = {
 	}
 }
 
-#
+#Papal Missionaries at the Mongol Court
 country_event = {
 	id = vn_missions.44
 	title = vn_missions.44.t
