@@ -281,21 +281,21 @@
  vn_sco_national_kirk_desc: "Die Entscheidung, ob wir eine "Nationale Kirk" zur Überwachung der schottischen Kirche einrichten oder nicht, wird ein entscheidender Faktor für unsere Akzeptanz oder Ablehnung der Reformation sein."
 #COMO
  vn_cmo_milan_rival_title: "Konsolidiert unser Territorium"
- vn_cmo_milan_rival_desc: "Milan's ambitions towards our territories and valleys have stirred the villages on the lake into rebelling against us, in the hope of more autonomy. We have to take a firm stance against the Ambrosian city to keep our territory intact."
+ vn_cmo_milan_rival_desc: "Mailands Ambitionen auf unsere Territorien und Täler haben die Dörfer am See dazu gebracht, sich gegen uns aufzulehnen, in der Hoffnung auf mehr Autonomie. Wir müssen eine feste Haltung gegen die ambrosische Stadt einnehmen, um unser Territorium intakt zu halten."
  vn_cmo_varese_conq_title: "Expandiert nach Seprio"
- vn_cmo_varese_conq_desc: "The Counts of Seprio reigned over much of the ancient region of Insubria, but lately they have lost most of their influence to Milan and us. We have to secure ourselves the trading city of Varese to curb the Milanese ambition in our territory."
+ vn_cmo_varese_conq_desc: "Die Grafen von Seprio herrschten über einen großen Teil der alten Region Insubrien, aber in letzter Zeit haben sie den größten Teil ihres Einflusses an Mailand und uns verloren. Wir müssen uns die Handelsstadt Varese sichern, um den mailändischen Ehrgeiz in unserem Gebiet einzudämmen."
  vn_cmo_dominate_lake_title: "Beherrscht den See"
- vn_cmo_dominate_lake_desc: "Complete control over Lake Como would ensure the monopoly of trade from the Central Alps. However, Milan has for a long time used Lecco as a springboard into our affairs, aiding the lake-side villages of Isola and Varenna against us. This has to stop!"
+ vn_cmo_dominate_lake_desc: "Die vollständige Kontrolle über den Comer See würde das Monopol des Handels aus den Zentralalpen sichern. Allerdings hat Mailand lange Zeit Lecco als Sprungbrett in unsere Angelegenheiten benutzt und die am See gelegenen Dörfer Isola und Varenna gegen uns unterstützt. Das muss aufhören!"
  vn_cmo_destroy_milan_title: "Vernichtet Mailand"
- vn_cmo_destroy_milan_desc: "We will no more accept the Milanese yoke as the leading power in Lombardy; for too long they have bullied us and our allies into submission. Today we will march on the city of Saint Ambrose and from its ashes, a new Lombard power will arise."
+ vn_cmo_destroy_milan_desc: "Wir werden das mailändische Joch als führende Macht in der Lombardei nicht mehr akzeptieren; zu lange haben sie uns und unsere Verbündeten in die Unterwerfung getrieben. Heute werden wir auf die Stadt des Heiligen Ambrosius marschieren und aus ihrer Asche wird eine neue lombardische Macht entstehen."
  vn_cmo_fortify_bellinzona_title: "Befestigt Bellinzona"
- vn_cmo_fortify_bellinzona_desc: "The city of Bellinzona finds itself behind a rock in the middle of the Ticino Valley. By fortifying the city and building a wall through the valley, we can block all armies from the north, becoming the undisputed leader of the region."
+ vn_cmo_fortify_bellinzona_desc: "Die Stadt Bellinzona befindet sich hinter einem Felsen in der Mitte des Tessiner Tals. Indem wir die Stadt befestigen und eine Mauer durch das Tal bauen, können wir alle Armeen aus dem Norden blockieren und werden so zum unangefochtenen Anführer der Region."
  vn_cmo_secure_valtellina_title: "Sichert Valtellina"
- vn_cmo_secure_valtellina_desc: "Valtellina has always been a region under our influence, as our bishop has religious jurisdiction over the valley. Our activity in the region has however been interfered with by the Bishop of Chur and the Swiss Confederacy. We have to take control of the important city of Chiavenna and close off all access to the valley to secure our position."
+ vn_cmo_secure_valtellina_desc: "Das Valtellina war schon immer eine Region unter unserem Einfluss, da unser Bischof die religiöse Gerichtsbarkeit über das Tal hat. Unsere Aktivitäten in der Region wurden jedoch durch den Bischof von Chur und die Schweizer Eidgenossenschaft behindert. Um unsere Position zu sichern, müssen wir die Kontrolle über die wichtige Stadt Chiavenna übernehmen und alle Zugänge zum Tal abriegeln."
  vn_cmo_silk_introduction_title: "Seide aus dem Orient"
- vn_cmo_silk_introduction_desc: "The silkworm was introduced by the Sforza family in the 15th century into Lombardy, forcing many peasants to cultivate the worm. Our city has a long tradition of wool production, and by adapting to the new fabric we will quickly be able to profit from it."
+ vn_cmo_silk_introduction_desc: "Die Seidenraupe wurde von der Familie Sforza im 15. Jahrhundert in der Lombardei eingeführt und viele Bauern wurden gezwungen, den Wurm zu züchten. Unsere Stadt hat eine lange Tradition in der Wollproduktion, und durch die Anpassung an den neuen Stoff werden wir schnell davon profitieren können."
  vn_cmo_silk_production_title: "Hauptstadt der Seide"
- vn_cmo_silk_production_desc: "In the following centuries, the introduction of industrial techniques and manufactories would make Como the leading center of production of silk in Italy, exporting its product all over Europe."
+ vn_cmo_silk_production_desc: "In den folgenden Jahrhunderten wurde Chum durch die Einführung industrieller Techniken und Manufakturen zum führenden Zentrum der Seidenproduktion in Italien und exportierte sein Produkt in ganz Europa."
 #BARCELONA
  vn_brc_mercenary_companies_title: "Söldnerkompanien"
  vn_brc_mercenary_companies_desc: "Catalonia is known for its strong mercenary tradition, as many Catalans have fought abroad in wars spanning as far as Italy and Greece. We should form a new Catalan Company that will aid our nation to glory and international renown."
