@@ -2253,7 +2253,7 @@
  vn_pap_guelphs_and_ghibellines_desc: ""
  vn_pap_guelphs_and_ghibellines.tt: "The §YGuelph-Ghibelline Conflict§! is active."
  vn_pap_guelphs_and_ghibellines.ss: " allies have a §YGuelph§!-dedicated ruler."
- vn_pap_guelphian_victory_title: "Guelph Victory"
+ vn_pap_guelphian_victory_title: "Guelphian Victory"
  vn_pap_guelphian_victory_desc: ""
  vn_pap_heal_the_schism_title: "Restoration of Communion"
  vn_pap_heal_the_schism_desc: ""
@@ -2264,7 +2264,7 @@
  vn_pap_council_of_clermont.ss: "Every country participating in the §YGreat Crusade§! gains the '§YAn Inspiring Speech§!' modifier for §Y10§! years, giving each country the following effects:\nLand Morale: §G+10.0%§!\nArmy Morale Recovery Speed: §G-5.00%§!\nLand Attrition: §G-15.0%§!"
  vn_pap_italian_emperorship_title: "Italian Emperorship"
  vn_pap_italian_emperorship_desc: ""
- vn_pap_italian_emperorship.tt: "The Emperor ^has a capital in §YItaly§! or §YSicily§! and belongs to the §YLatin§! culture group."
+ vn_pap_italian_emperorship.tt: "The Emperor has a capital in §YItaly§! or §YSicily§! and belongs to the §YLatin§! culture group."
  vn_pap_catholic_italy_title: "A Catholic Italy"
  vn_pap_catholic_italy_desc: ""
  vn_pap_conquer_marche_title: "Papal Baronages"
@@ -4003,14 +4003,18 @@
  vn_missions.39.b: "We should be humble about our accomplishments."
 #Papal States
  vn_missions.40.t: "The Crusade of Barbastro"
- vn_missions.40.d: "Facing the constant threat of the Muslim Taifas to their Christian neighbours, [PAP.Monarch.GetTitle] [PAP.Monarch.GetName] has publically called for a crusade against the Moorish invaders - speaking of a 'Christian Emergency'. The papal appeal spread rapidly throughout Catholic Europe, and countless princes and bishops soon gathered their retinue to support the Christian kingdoms of Iberia in their ceaseless and exhaustive fights.\nThey are now marching together across the Pyrenees to reach the only lightly fortified and defended borders of the Taifas in the east, ready to conquer the unprotected fortresses and cities."
+ vn_missions.40.d: "Facing the constant threats of the Muslim Taifas towards their Christian neighbours, [PAP.Monarch.GetTitle] [PAP.Monarch.GetName] has publically called for a Crusade against the Moorish invaders, speaking of a Christian emergency. The Papal appeal spread rapidly throughout Catholic Europe, and countless princes and bishops soon gathered their knights to support the Christian kingdoms of Iberia in their ceaseless and exhaustive wars.\nNow, they are altogether marching across the Pyrenean Mountains to reach the only slightly fortified and defended borders of the Taifas in the east, ready to conquer the unprotected fortresses and cities."
  vn_missions.40.a: "To battle!"
  vn_missions.41.t: "Victory at Barbastro"
- vn_missions.41.d: ""
- vn_missions.41.a: "Wonderful"
- vn_missions.42.t: "Failure at Barbastro"
- vn_missions.42.d: ""
- vn_missions.42.a: "Shameful"
+ vn_missions.41.d: "The Crusaders, who set out from France, Burgundy and Italy to Iberia to fight the Moorish Taifas in the east, have been victorious!\nIn a spectacular battle at Barbastro, the knights defeated the unorganized forces of the Muslim Taifas, quickly reducing their remaining defenses to nothing. This day will not only seal the beginning of the Christian Reconquista, but will inspire all devout Christians to fight against faithless tyrants.\nChristendom shall hail [Root.Monarch.GetTitle] [Root.Monarch.GetName] for his great wisdom eternally!"
+ vn_missions.41.a: "¡Santiago y cierra España!"
+ vn_missions.42.t: "Defeat at Barbastro"
+ vn_missions.42.d: "The Crusaders, who set out from France, Burgundy and Italy to Iberia to fight the Moorish Taifas in the east, have failed!\nIn a disastrous battle at Barbastro, the Moors defeated the unorganized forces of the Crusaders, quickly reducing their remaining reinforcement to nothing. The hope of many Christians of ever regaining all of Iberia for Christendom has been dashed this shameful day, and the Angels will weep for the fallen soldiers.\n[Root.Monarch.GetTitle] [Root.Monarch.GetName], who ordered the expedition to Barbastro, will have to bear responsibility for that day."
+ vn_missions.42.a: "We have disappointed Matamoros."
  vn_missions.43.t: "Corruption in the Electoral College"
- vn_missions.43.d: "Recently, many diplomats and dignitaries of the Electors of the Holy Roman Empire, who were stationed at our court, abruptly departed with haste and resentment. Recently, most diplomats and dignitaries of the electors of the Holy Roman Empire, who were stationed at our court, suddenly departed with haste and ill will. When we learned a little later that our own envoys sent to the Electoral courts had been forced to leave, we knew that this could not be a coincidence and that there must be a reason for it.\n\nOur agents and spies have traced the trail of these highly suspicious events, returning to our court with unpleasant news: Apparently, [PAP.Monarch.GetTitle] [PAP.Monarch.GetName] has interfered in the internal affairs of the Empire unjustifiably and persuaded the Electors to turn away from [Root.Monarch.GetTitle] [Root.Monarch.GetName], the House of [Root.Monarch.Dynasty.GetName] and our recent policies through disgraceful bribery and blackmail.\n\nPersuading the Electors to elect [Root.Monarch.GetTitle] [Root.Monarch.GetName]'s heir as next Holy Roman Emperor will particularly become a difficult task for us."
+ vn_missions.43.d: "Recently, many diplomats and dignitaries of the Electors of the Holy Roman Empire, who were stationed at our court, abruptly departed with haste and resentment. When we learned a little later that our own envoys sent to the Electoral courts had been forced to leave, we knew that this could not be a coincidence and that there must be a reason for it.\n\nOur agents and spies have traced the trail of these highly suspicious events, returning to our court with unpleasant news: Apparently, [PAP.Monarch.GetTitle] [PAP.Monarch.GetName] has interfered in the internal affairs of the Empire unjustifiably and persuaded the Electors to turn away from [Root.Monarch.GetTitle] [Root.Monarch.GetName], the House of [Root.Monarch.Dynasty.GetName] and our recent policies through disgraceful bribery and blackmail.\n\nPersuading the Electors to elect [Root.Monarch.GetTitle] [Root.Monarch.GetName]'s heir as next Holy Roman Emperor will particularly become a difficult task for us."
  vn_missions.43.a: "Pernicious and scornful!"
+ vn_missions.44.t: "Christian Missionaries at the Mongolian Court"
+ vn_missions.44.d: "An envoy from faraway Europe has arrived at our court, bringing with them rich chests and exotic goods. They claim to want to expand the cultural and scientific exchange between us Mongols and them Europeans, for which they propose us to convert to their faith - Christianity.\nShould we welcome the Christian missionaries into our realm, or repel them?"
+ vn_missions.44.a: "This is a brave but promising idea."
+ vn_missions.44.b: "We must not lose our syncretism to false priests."
