@@ -5,6 +5,7 @@
 -Small fixes for the following mission trees: Flanders, Russia, Pisa, Mazovia, Switzerland, Provence, Sicily
 -The Baltic Orders should finally, and I mean finally, spawn with proper techs
 -Missions will no longer require you to increase the loyalty of estates over 60% or their landshare at all
+-Added ewn mission tree for the Papal States with 50 missions
 -Added 1 new estate privilege for the Mamluks
 -Hohenstaufer Inheritance incident can now also fire in the Age of Holy Wars
 -Fragmentation of Poland ending event should no longer fire twice if you choose to keep Poland united
